Suppression de data/db

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <head>
   <title>BREST 2016</title>
   <!-- BOOTSTRAP -->
-  <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet"> 
+  <link href="stylesheets/bootstrap.css" rel="stylesheet"> 
 
   <!-- Angular API -->
   <script src="lib/angular.js"></script>
