--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <div class="page-header">
-	<h1>Flapper News</h1>
+	<h1>BREST 2016</h1>
 </div>
 
 <div ng-show="error" class="alert alert-danger row">
