--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,8 +23,9 @@
   <nav class="navbar navbar-default pull-right" ng-controller="NavCtrl">
     <ul class="nav navbar-nav">
       <li ng-show="isAdmin()"><a href="/#/admin">Administration</a></li>
+      <li ng-show="isLoggedIn()"><a href="/#/mes_reservations">Mes reservations</a></li>
       <li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
-      <li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Log Out</a></li>
+      <li ng-show="isLoggedIn()"><a href="" ng-click="logOut()" style="color:red">Log Out</a></li>
       <li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
       <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
 
@@ -38,58 +39,47 @@
   </div>
 
   
+  <script type="text/ng-template" id="/home.html">
+    <% include animations %>
+  </script>
 
   <script type="text/ng-template" id="/admin.html">
-    
     <% include admin %>
-
   </script>
 
-  <script type="text/ng-template" id="/home.html">
-    <% include home %>
+  <script type="text/ng-template" id="/code.html">
+    <% include code %>
   </script>
+
+
+
+
 
   <script type="text/ng-template" id="/posts.html">
-    <div class="page-header">
-      <h3>
-        <a ng-show="post.link" href="{{post.link}}">
-          {{post.title}}
-        </a>
-        <span ng-hide="post.link">
-          {{post.title}}
-        </span>
-      </h3>
-    </div>
-
-    <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
-      <span class="glyphicon glyphicon-thumbs-up" ng-click="upvote(comment)"></span>
-        {{comment.upvotes}} 
-      <span class="glyphicon glyphicon-thumbs-down" ng-click="downvote(comment)"></span>
-        - by {{comment.author}}
-      <span style="font-size:20px; margin-left:10px;">
-        {{comment.body}}
-      </span>
-    </div>
-
-    <form ng-submit="addComment()" ng-show="isLoggedIn()" style="margin-top:30px;">
-      <h3>Add a new comment</h3>
-
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Comment" ng-model="body"></input>
-      </div>
-
-      <button type="submit" class="btn btn-primary">Post</button>
-    </form>
-    <div ng-hide="isLoggedIn()">
-	  <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can comment.</h3>
-	</div>
+    <% include post %> //a supprimer dans le futur
   </script>
+
+  <script type="text/ng-template" id="/animation.html">
+    <% include animation %> //a supprimer dans le futur
+  </script>
+  <script type="text/ng-template" id="/animations.html">
+    <% include animations %> 
+  </script>
+
+  <script type="text/ng-template" id="/reservation.html">
+    <% include reservation %> //a supprimer dans le futur
+  </script>
+  <script type="text/ng-template" id="/mes_reservations.html">
+    <% include mes_reservations %> 
+  </script>
+
+
+
+
   
   <script type="text/ng-template" id="/register.html">
 	  <% include register %>
 	</script>
-
-
 	<script type="text/ng-template" id="/login.html">
     <% include login %>
   </script>					  
