--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,13 @@
   <script src="lib/angular.js"></script>
   <script src="lib/angular-ui-router.js"></script>
 
-  <!-- Angular app / controllers / routes -->
+  <!-- Angular app / controllers / routes / factories-->
   <script src="javascripts/angularApp.js"></script>
   <script src="javascripts/controllers.js"></script>
-  <script src="javascripts/factories.js"></script>
+  
+  <script src="javascripts/factAuth.js"></script>
+  <script src="javascripts/factPosts.js"></script>
+  <script src="javascripts/factAnimations.js"></script>
 
 
 
