--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,11 @@
     <h1>BREST 2016</h1>
   </div>
 
-  
+  <h2>Liste des animations</h2>
+
+  <div ng-repeat="a in animations">
+    <span class="animation_libelle">{{a.libelle}}</span>
+  </div>
 
 
 
