--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,7 @@
 <body ng-app="brest">
   <nav class="navbar navbar-default pull-right" ng-controller="NavCtrl">
     <ul class="nav navbar-nav">
+      <li><a href="/#/home">Accueil</a></li>
       <li ng-show="isAdmin()"><a href="/#/addAnimation">Ajouter une animation</a></li>
       <li ng-show="isLoggedIn()"><a href="/#/mes_reservations">Mes reservations</a></li>
       <li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
@@ -45,7 +46,7 @@
 
   
   <script type="text/ng-template" id="/home.html">
-    <% include animations %>
+    <% include home %>
   </script>
 
   <script type="text/ng-template" id="/addAnimation.html">
