--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
   <title>BREST 2016</title>
   <!-- BOOTSTRAP -->
   <link href="stylesheets/bootstrap.css" rel="stylesheet"> 
+  <link href="stylesheets/style.css" rel="stylesheet"> 
 
   <!-- Angular API -->
   <script src="lib/angular.js"></script>
