--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,28 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+
 
 a {
   color: #00B7FF;
+}
+
+h2{
+	    background: cornflowerblue;
+    color: white;
+    padding: 5px;
+}
+
+.navbar{
+	    position: fixed;
+    right: 0;
+    z-index: 9999;
+}
+
+input, textarea{
+	margin-bottom: 15px;
+}
+
+.animation{
+    margin: 5px 0px 5px 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top: 1px solid lightgray;
 }
