--- a/views/addAnimation.ejs
+++ b/views/addAnimation.ejs
@@ -12,7 +12,8 @@
 
       		<textarea placeholder="Description" class="form-control" ng-model="description"></textarea>
 
-          Image de présentation : <input type="file" class="form-control" onchange="angular.element(this).scope().setImageFile(this)" file-model = "myFile">
+          Image de présentation : 
+          <!-- <input type="file" class="form-control" onchange="angular.element(this).scope().setImageFile(this)" file-model = "myFile"> -->
           
 
       		<input type="text" class="form-control" placeholder="Nombre de place max" ng-model="place_max"></input>
