--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
       <li><a href="/#/home">Accueil</a></li>
       <li ng-show="isAdmin()"><a href="/#/addAnimation">Ajouter une animation</a></li>
       <li ng-show="isLoggedIn()"><a href="/#/mes_reservations">Mes reservations</a></li>
-      <li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
+      <li ng-show="isLoggedIn()"><a class="nav_username">{{ currentUser() }}</a></li>
       <li ng-show="isLoggedIn()"><a href="" ng-click="logOut()" style="color:red">Log Out</a></li>
       <li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
       <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
