--- a/views/addAnimation.ejs
+++ b/views/addAnimation.ejs
@@ -12,13 +12,13 @@
 
       		<textarea placeholder="Description" class="form-control" ng-model="description"></textarea>
 
-          Image de présentation : 
-          <!-- <input type="file" class="form-control" onchange="angular.element(this).scope().setImageFile(this)" file-model = "myFile"> -->
+          <!-- Image de présentation : 
+          <input type="file" class="form-control" onchange="angular.element(this).scope().setImageFile(this)" file-model = "myFile"> -->
           
 
       		<input type="text" class="form-control" placeholder="Nombre de place max" ng-model="place_max"></input>
-      		<input type="number" class="form-control" placeholder="Heure de début" ng-model="heureDebut"></input>
-      		<input type="number" class="form-control" placeholder="Heure de fin" ng-model="heureFin"></input>
+      		<input type="text" class="form-control" placeholder="Heure de début" ng-model="heureDebut"></input>
+      		<input type="text" class="form-control" placeholder="Heure de fin" ng-model="heureFin"></input>
     	</div>
 
     	<button type="submit" class="btn btn-primary">Ajouter</button>
