--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,8 @@
 
           <!-- ADMIN PART -->
           <div class="col-md-12" ng-show="isAdmin()">
-            <a class="btn btn-danger" href="#" ng-click="deleteAnimation($index)">Supprimer<span class="glyphicon glyphicon-trash"></span></a>
+            <a class="btn btn-danger" href="#" ng-click="deleteAnimation($index)">Supprimer <span class="glyphicon glyphicon-trash"></span></a>
+            <a class="btn btn-warning" href="" >Modifier <span class="glyphicon glyphicon-pencil"></span></a>
           </div>
       </div>
   </div>
