peut etre que ça va marcher

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,6 +54,10 @@
     <% include addAnimation %>
   </script>
 
+  <script type="text/ng-template" id="/editAnimation.html">
+    <% include editAnimation %>
+  </script>
+
   <script type="text/ng-template" id="/admin.html">
     <% include admin %>
   </script>
