lainlain pourrais passer sur svn

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,6 +55,10 @@
 
   <script type="text/ng-template" id="/addAnimation.html">
     <% include addAnimation %>
+  </script> 
+
+  <script type="text/ng-template" id="/addOption.html">
+    <% include addOption %>
   </script>
 
   <script type="text/ng-template" id="/admin.html">
