--- a/views/addOption.ejs
+++ b/views/addOption.ejs
@@ -5,4 +5,11 @@
 
   	<h2>Ajouter une option </h2>
 
-  	
+  	<form ng-submit="addAnimation()" style="margin-top:30px;">
+
+  		<div class="form-group">
+  			<input type="text" class="form-control" placeholder="Titre" ng-model="titre">
+  			<input type="text" class="form-control" placeholder="Description" ng-model="description">
+  		</div>
+
+  	</form>
