--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,10 +14,12 @@
 
   <script src="javascripts/controllers.js"></script>
   <script src="javascripts/controllerAnimation.js"></script>
+  <script src="javascripts/controllerOption.js"></script>
   
   <script src="javascripts/factAuth.js"></script>
   <script src="javascripts/factPosts.js"></script>
   <script src="javascripts/factAnimations.js"></script>
+  <script src="javascripts/factOption.js"></script>
 
 
 
