--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,6 +25,10 @@ input, textarea{
 	margin-bottom: 15px;
 }
 
+.ajout-options{
+ background-color: rgba(0, 188, 212, 0.2);;
+}
+
 .animation{
     margin: 5px 0px 5px 0px;
     padding-top: 10px;
