--- a/views/addAnimation.ejs
+++ b/views/addAnimation.ejs
@@ -16,7 +16,7 @@
           <input type="file" class="form-control" onchange="angular.element(this).scope().setImageFile(this)" file-model = "myFile"> -->
           
 
-      		<input type="text" class="form-control" placeholder="Nombre de place max" ng-model="place_max"></input>
+      		<input type="number" class="form-control" placeholder="Nombre de place max" ng-model="place_max"></input>
       		<input type="text" class="form-control" placeholder="Heure de début" ng-model="heureDebut"></input>
       		<input type="text" class="form-control" placeholder="Heure de fin" ng-model="heureFin"></input>
     	</div>
@@ -28,7 +28,8 @@
         </div>
       </div>
 
-      {{checked_options}}
+      {{checked_options | json}}
+      <br/>
 
     	<button type="submit" class="btn btn-primary">Ajouter</button>
   	</form>
