--- a/views/addOption.ejs
+++ b/views/addOption.ejs
@@ -2,20 +2,24 @@
 
     <h1>BREST 2016</h1>
 </div>
+<div class="col-md-6">
 	<h2>Liste des options</h2>
 
-	<div ng-repeat="o in options">
-  		{{o.titre}}
-  	</div>
+	<div ng-repeat="o in optionss">
+  		<div class="col-md-6">{{o.titre}}</div> 
+      <div class="col-md-6"><a class="btn btn-danger" href="#" ng-click="deleteOption($index)">Supprimer <span class="glyphicon glyphicon-trash"></span></a></div>
+	</div>
+</div>
+<div class="col-md-6">
+	<h2>Ajouter une option </h2>
+	
+	<form ng-submit="addOption()" style="margin-top:30px;">
 
-  	<h2>Ajouter une option </h2>
-  	
-  	<form ng-submit="addOption()" style="margin-top:30px;">
+		<div class="form-group">
+			<input type="text" class="form-control" placeholder="Titre" ng-model="titre_option">
+			<input type="text" class="form-control" placeholder="Description" ng-model="description_option">
+		</div>
 
-  		<div class="form-group">
-  			<input type="text" class="form-control" placeholder="Titre" ng-model="titre_option">
-  			<input type="text" class="form-control" placeholder="Description" ng-model="description_option">
-  		</div>
-
-  		<button type="submit" class="btn btn-primary">Ajouter</button>
-  	</form>
+		<button type="submit" class="btn btn-primary">Ajouter</button>
+	</form>
+</div>
