modifier une animations via le bouton modifier de l'animation

--- a/views/editAnimation.ejs
+++ b/views/editAnimation.ejs
@@ -4,7 +4,7 @@
 </div>
 
   	<h2>Modifier une animation </h2>
-    
+
   	<form ng-submit="updateAnimation()" style="margin-top:30px;">
 
     	<div class="form-group">
@@ -21,8 +21,8 @@
       		<input type="text" class="form-control" placeholder="Heure de fin" ng-model="heureFin"></input>
     	</div>
 
-    	<button type="submit" class="btn btn-primary">Ajouter</button>
-      
+    	<button type="submit" class="btn btn-primary">Modifier</button>
+
   	</form>
 
 
