commit de merde

--- a/views/editAnimation.ejs
+++ b/views/editAnimation.ejs
@@ -5,6 +5,8 @@
 
   	<h2>Modifier une animation </h2>
 
+    {{animation._id}}
+
   	<form ng-submit="updateAnimation()" style="margin-top:30px;">
 
     	<div class="form-group">
