--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,7 @@
           <h4>Options disponibles</h4>
           <div class="col-md-12 ajout-options">
             <div ng-repeat="o in a.liste_options">
-              {{o}}
+              {{o.titre}}
             </div>
           </div>
           <br/><br/>
