options et route seeAnimation

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,7 @@ input, textarea{
 }
 
 .ajout-options{
- background-color: rgba(0, 188, 212, 0.2);;
+ background-color: rgba(0, 188, 212, 0.2);
 }
 
 .animation{
