--- a/views/addOption.ejs
+++ b/views/addOption.ejs
@@ -6,7 +6,7 @@
 	<h2>Liste des options</h2>
 
 	<div ng-repeat="o in optionss">
-  		<div class="col-md-6">{{o.titre}}</div> 
+  		<div class="col-md-6">{{o.titre}} - {{o.description}}</div> 
       <div class="col-md-6"><a class="btn btn-danger" href="#" ng-click="deleteOption($index)">Supprimer <span class="glyphicon glyphicon-trash"></span></a></div>
 	</div>
 </div>
