--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,8 @@
           </a>
       </div>
       <div class="col-md-7">
-          <h3>{{a.libelle}}</h3>
+          <div class="col-md-6"><h3>{{a.libelle}}</h3></div>
+          <div class="col-md-6"> <a class="btn btn-primary" href="/#/animations/{{a._id}}">Réserver <span class="glyphicon glyphicon-ok"></span></a></div>
           <h4>{{a.description}}</h4>     
 
           <div class="col-md-12">
