--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,11 +15,13 @@
   <script src="javascripts/controllers.js"></script>
   <script src="javascripts/controllerAnimation.js"></script>
   <script src="javascripts/controllerOption.js"></script>
+  <script src="javascripts/controllerReservation.js"></script>
   
   <script src="javascripts/factAuth.js"></script>
   <script src="javascripts/factPosts.js"></script>
   <script src="javascripts/factAnimations.js"></script>
   <script src="javascripts/factOption.js"></script>
+  <script src="javascripts/factReservations.js"></script>
 
 
 
