--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
       <div class="col-md-7">
           <div class="col-md-6"><h3>{{a.libelle}}</h3></div>
           <div class="col-md-6"> <a class="btn btn-primary" href="/#/animations/{{a._id}}">Réserver <span class="glyphicon glyphicon-ok"></span></a></div>
-          <h4>{{a.description}}</h4>     
+          <div class="col-md-12"><h5>{{a.description}}</h5>  </div>   
 
           <div class="col-md-12">
             <span>Places disponibles : <b>{{a.place_max}}</b></span><br/>
