--- a/views/animation.ejs
+++ b/views/animation.ejs
@@ -3,3 +3,8 @@
 </div>
 
 <h2>{{animation.libelle}}</h2>
+
+<form ng-submit="addReservation()" style="margin-top:30px;">
+	<button type="submit" class="btn btn-primary">Réserver cette animation</button>
+</form>
+
