--- a/views/editAnimation.ejs
+++ b/views/editAnimation.ejs
@@ -29,6 +29,11 @@
       </div>
 
     	<button type="submit" class="btn btn-primary">Modifier</button>
+
+      <div ng-show="success" class="alert alert-success">
+        <strong>{{success}}</strong> - L'animation {{animation.libelle}} a bien été modifiée.
+      </div>
+
   	</form>
-    
+
   </form>
