--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,6 +27,8 @@ input, textarea{
 
 .ajout-options{
  background-color: rgba(0, 188, 212, 0.2);
+ margin-bottom: 15px;
+ margin-top:15px;
 }
 
 .animation{
