ajout date anim

--- a/views/addAnimation.ejs
+++ b/views/addAnimation.ejs
@@ -17,6 +17,7 @@
           
 
       		<input type="number" class="form-control" placeholder="Nombre de place max" ng-model="place_max"></input>
+          <input type="date" class="form-control" placeholder="Date de l'animation" ng-model="date"></input>
       		<input type="text" class="form-control" placeholder="Heure de début" ng-model="heureDebut"></input>
       		<input type="text" class="form-control" placeholder="Heure de fin" ng-model="heureFin"></input>
     	</div>
