--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,6 +19,7 @@
 
           <div class="col-md-12">
             <span>Places disponibles : <b>{{a.place_dispo}}</b></span><br/>
+            <span>Date : <b>{{a.date}}</b></span><br/>
             <span>Début : <b>{{a.heure_debut}}</b> - Fin : <b>{{a.heure_fin}}</b></span>
           </div>     
           <br/><br/>
