je sais pas ce que j'ai fait

--- a/views/editAnimation.ejs
+++ b/views/editAnimation.ejs
@@ -22,6 +22,7 @@
     	</div>
 
       <h3>Modification des options choisies</h3>
+      {{animation.liste_options}}
       <div class="col-md-12 ajout-options">
         <div ng-repeat="o in optionss">
           <input type="checkbox" ng-model="checkboxes" ng-change="addCheckOption(o._id)" id="{{o._id}}" > <label for="{{o._id}}">{{o.titre}}</label>
