--- a/views/addAnimation.ejs
+++ b/views/addAnimation.ejs
@@ -20,7 +20,11 @@
           <div class="col-md-2"><label for="place_max">Places max</label></div>
       		<div class="col-md-10"><input id="place_max" type="number" class="form-control" placeholder="Nombre de place max" ng-model="place_max"></input></div>
 
-          <input type="date" class="form-control" placeholder="Date de l'animation" ng-model="date"></input>
+          
+          <div class="col-md-2"><label for="date">Date</label></div>
+          <div class="col-md-10"><input id="date" type="date" class="form-control" placeholder="Date de l'animation" ng-model="date"></input></div>
+
+
           <div class="col-md-2"><label for="heure_debut">Début</label></div>
       		<div class="col-md-10"><input id="heure_debut" type="text" class="form-control" placeholder="Heure de début" ng-model="heureDebut"></input></div>
 
