modification view addAnimations.ejs

--- a/views/addAnimation.ejs
+++ b/views/addAnimation.ejs
@@ -18,7 +18,7 @@
           <input type="file" class="form-control" onchange="angular.element(this).scope().setImageFile(this)" file-model = "myFile"> -->
           
           <div class="col-md-2"><label for="place_max">Places max</label></div>
-      		<div class="col-md-10"><input id="place_max" type="number" class="form-control" placeholder="Nombre de place max" ng-model="place_max"></input></div>
+      		<div class="col-md-10"><input id="place_max" type="number" class="form-control" placeholder="Nombre de place max" ng-model="place_max" value="0" min="0" max="10"></input></div>
 
           
           <div class="col-md-2"><label for="date">Date</label></div>
