regle de routage

--- a/views/code.ejs
+++ b/views/code.ejs
@@ -9,6 +9,7 @@
     	<div class="form-group">
       		<input type="text" class="form-control" placeholder="code" ng-required="true" ng-model="formData.code"></input>
     	</div>
+      <div>Vous avez déjà un compte ? <a href="#/login">connectez vous </a>!</div>
 
     	<button type="submit" class="btn btn-primary">Accéder au site</button>
   	</form>
