--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,5 +22,6 @@ style="margin-top:30px;">
   			placeholder="Password"
   			ng-model="user.password"></input>
 	</div>
+	<div>Pas de compte ? <a href="#/code">entrez votre code</a> pour créer un compte</div>
 	<button type="submit" class="btn btn-primary">Log In</button>
 </form>
