--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
   <script src="javascripts/controllerReservation.js"></script>
   <script src="javascripts/controllerCode.js"></script>
   <script src="javascripts/controllerNav.js"></script>
+  <script src="javascripts/controllerAuth.js"></script>
   
   <script src="javascripts/factAuth.js"></script>
   <script src="javascripts/factPosts.js"></script>
@@ -38,7 +39,7 @@
   <nav class="navbar navbar-default pull-right" ng-controller="controllerNav" ng-hide="currentPath() === '/code'">
     
     <ul class="nav navbar-nav">
-      <li><a href="/#/home">Accueil</a></li>
+      <li ng-show="isLoggedIn()"><a href="/#/home">Accueil</a></li>
 
       <li ng-show="isAdmin()"><a href="/#/addAnimation">Ajouter une animation</a></li>
       <li ng-show="isAdmin()"><a href="/#/addOption">Ajouter une option</a></li>
@@ -46,8 +47,8 @@
       <li ng-show="isLoggedIn()"><a href="/#/mes_reservations">Mes reservations</a></li>
       <li ng-show="isLoggedIn()"><a class="nav_username">{{ currentUser() }}</a></li>
       <li ng-show="isLoggedIn()"><a href="" ng-click="logOut()" style="color:red">Log Out</a></li>
-      <li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
-      <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
+      <!-- <li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
+      <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li> -->
 
     </ul>
   </nav>
