--- a/views/register.ejs
+++ b/views/register.ejs
@@ -22,5 +22,6 @@
 	      placeholder="Password"
 	      ng-model="user.password"></input>
 	    </div>
+	    <div>Vous avez déjà un compte ? <a href="#/login">connectez vous </a>!</div>
 	    <button type="submit" class="btn btn-primary">Register</button>
 	  </form>
