--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,8 @@
 
   <h2>Liste des animations</h2>
 
+  <button ng-click="refreshAnimations()">Refresh animations</button>
+
 
   <div ng-repeat="a in animations" class="row animation" >
       <div class="col-md-5 img_animation">
