--- a/views/animation.ejs
+++ b/views/animation.ejs
@@ -11,14 +11,10 @@
     	<div class="col-sm-10">
       		<input type="text" class="form-control"  id="utilisateur" placeholder="utilisateur" ng-model="user" disabled="disabled"></input>
     	</div>
-  	</div>
-	<div class="form-group">
     	<label for="nbplacedispo" class="col-sm-2 control-label">Places disponible</label>
     	<div class="col-sm-10">
       		<input type="text" class="form-control"  id="nbplacedispo" placeholder="nombre places disponible" ng-model="animation.place_dispo" disabled="disabled"></input>
     	</div>
-  	</div>	
-  	<div class="form-group">
     	<label for="nbplacesouhaitee" class="col-sm-2 control-label">Places souhaitées</label>
     	<div class="col-sm-10">
       		<input type="text" class="form-control"  id="nbplacesouhaitee" placeholder="Nombre de places souhaitées" ng-model="nbPlaceReserve"></input>
@@ -26,7 +22,9 @@
   	</div>	
 
 	<h3>Option(s) souhaitée(s)</h3>
+
       <div class="col-md-12 ajout-options">
+        {{option_in_reservation}}
         <div ng-repeat="o in animation.liste_options">
           <input type="checkbox" ng-model="checkboxesReservation.selected" ng-change="addCheckOptionReservation(o._id)" id="{{o._id}}" > <label for="{{o._id}}">{{o.titre}}<label>
         </div>
