--- a/views/editAnimation.ejs
+++ b/views/editAnimation.ejs
@@ -17,6 +17,7 @@
           
 
       		<input type="number" class="form-control" placeholder="Nombre de place max" ng-model="animation.place_max"></input>
+          <input type="number" class="form-control" placeholder="Nombre de place dispo" ng-model="animation.place_dispo" min="0" max="{{animation.place_max}}"></input>
       		<input type="text" class="form-control" placeholder="Heure de début" ng-model="animation.heure_debut"></input>
       		<input type="text" class="form-control" placeholder="Heure de fin" ng-model="animation.heure_fin"></input>
     	</div>
