vue user etc ...

--- a/views/addAnimation.ejs
+++ b/views/addAnimation.ejs
@@ -28,10 +28,10 @@
 
 
           <div class="col-md-2"><label for="heure_debut">Début</label></div>
-      		<div class="col-md-10"><input id="heure_debut" type="text" class="form-control" placeholder="Heure de début" ng-model="heureDebut"></input></div>
+      		<div class="col-md-10"><input id="heure_debut" type="time" datetime="hh:mm" class="form-control" placeholder="Heure de début" ng-model="heureDebut"></input></div>
 
           <div class="col-md-2"><label for="heure_fin">Fin</label></div>
-      		<div class="col-md-10"><input id="heure_fin" type="text" class="form-control" placeholder="Heure de fin" ng-model="heureFin"></input></div>
+      		<div class="col-md-10"><input id="heure_fin" type="time" datetime="hh:mm" class="form-control" placeholder="Heure de fin" ng-model="heureFin"></input></div>
 
     	</div>
 
