--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
           <div class="col-md-12">
             <span>Places disponibles : <b>{{a.place_dispo}}</b></span><br/>
             <span>Date : <b>{{a.date}}</b></span><br/>
-            <span>Début : <b>{{a.heure_debut}}</b> - Fin : <b>{{a.heure_fin}}</b></span>
+            <span>Début : <b>{{a.heure_debut | date: "HH:mm" }}</b> - Fin : <b>{{a.heure_fin | date: "HH:mm"}}</b></span>
           </div>     
           <br/><br/>
           <div class="col-md-12 ajout-options">
