--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,6 +44,7 @@
 
       <li ng-show="isAdmin()"><a href="/#/addAnimation">Ajouter une animation</a></li>
       <li ng-show="isAdmin()"><a href="/#/addOption">Ajouter une option</a></li>
+      <li ng-show="isAdmin()"><a href="/#/utilisateurs">Utilisateurs</a></li>
 
       <li ng-show="isLoggedIn()"><a href="/#/mes_reservations">Mes reservations</a></li>
       <li ng-show="isLoggedIn()"><a class="nav_username">{{ currentUser() }}</a></li>
@@ -78,6 +79,10 @@
 
   <script type="text/ng-template" id="/editAnimation.html">
     <% include editAnimation %>
+  </script>
+
+  <script type="text/ng-template" id="/utilisateurs.html">
+    <% include utilisateurs %>
   </script>
 
   <script type="text/ng-template" id="/admin.html">
