--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,9 +1,10 @@
 <div class="page-header">
 	    <h1>BREST 2016</h1>
 	  </div>
+
 	
 	  <div ng-show="error" class="alert alert-danger row">
-	    <span>{{ error.message }}</span>
+	    <span>{{ error }}</span>
 	  </div>
 	
 	  <form ng-submit="register()"
