Nettoyage de printemps

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
 
 <form ng-submit="logIn()"
 style="margin-top:30px;">
-	<h3>Log In</h3>
+	<h3>Connexion</h3>
 
 	<div class="form-group">
   		<input type="text"
@@ -23,5 +23,5 @@ style="margin-top:30px;">
   			ng-model="user.password"></input>
 	</div>
 	<div>Pas de compte ? <a href="#/code">entrez votre code</a> pour créer un compte</div>
-	<button type="submit" class="btn btn-primary">Log In</button>
+	<button type="submit" class="btn btn-primary">Connexion</button>
 </form>
