Unicité de la création d'option

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,7 @@
 
           <div class="col-md-12">
             <span>Places disponibles : <b>{{a.place_dispo}}</b></span><br/>
-            <span>Date : <b>{{a.date | date: "dd:mm:yyyy"}}</b></span><br/>
+            <span>Date : <b>{{a.date | date: "dd/MM/yyyy"}}</b></span><br/>
             <span>Début : <b>{{a.heure_debut | date: "HH:mm" }}</b> - Fin : <b>{{a.heure_fin | date: "HH:mm"}}</b></span>
           </div>     
           <br/><br/>
