--- a/views/editAnimation.ejs
+++ b/views/editAnimation.ejs
@@ -17,8 +17,6 @@
 
           <!-- Image de présentation : 
           <input type="file" class="form-control" onchange="angular.element(this).scope().setImageFile(this)" file-model = "myFile"> -->
-          
-         {{animation}}
 
           <div class="col-md-2"><label for="place_max">Places max</label></div>
       		<div class="col-md-10"><input type="number" class="form-control" placeholder="Nombre de place max" ng-model="animation.place_max"></input></div>
@@ -30,11 +28,14 @@
           <div class="col-md-10"><input id="date" type="date" placeholder="dd-MM-yyyy" class="form-control"  ng-model="animation.date"></input></div>
 
           <div class="col-md-2"><label for="heure_debut">Début</label></div>
-      		<div class="col-md-10"><input type="time" class="form-control" placeholder="Heure de début" ng-model="animation.heure_debut"></input></div>
+      		<div class="col-md-10"><input type="time" class="form-control" placeholder="Heure de début" max="animation.heure_fin | date: HH:mm" ng-model="animation.heure_debut"></input></div>
 
           <div class="col-md-2"><label for="heure_fin">Fin</label></div>
       		<div class="col-md-10"><input type="time" class="form-control" placeholder="Heure de fin" ng-model="animation.heure_fin"></input></div>
 
+          {{animation.heure_debut}}
+          <br/>
+          {{animation.heure_fin}}
     	</div>
 
       <h3>Modification des options choisies</h3>
