--- a/views/editAnimation.ejs
+++ b/views/editAnimation.ejs
@@ -28,14 +28,12 @@
           <div class="col-md-10"><input id="date" type="date" placeholder="dd-MM-yyyy" class="form-control"  ng-model="animation.date"></input></div>
 
           <div class="col-md-2"><label for="heure_debut">Début</label></div>
-      		<div class="col-md-10"><input type="time" class="form-control" placeholder="Heure de début" max="animation.heure_fin | date: HH:mm" ng-model="animation.heure_debut"></input></div>
+      		<div class="col-md-10"><input type="time" ng-change="timeChanged()" class="form-control" placeholder="Heure de début" ng-model="animation.heure_debut"></input></div>
 
           <div class="col-md-2"><label for="heure_fin">Fin</label></div>
-      		<div class="col-md-10"><input type="time" class="form-control" placeholder="Heure de fin" ng-model="animation.heure_fin"></input></div>
+      		<div class="col-md-10"><input type="time" ng-change="timeChanged()" class="form-control" placeholder="Heure de fin" ng-model="animation.heure_fin"></input></div>
 
-          {{animation.heure_debut}}
-          <br/>
-          {{animation.heure_fin}}
+          
     	</div>
 
       <h3>Modification des options choisies</h3>
