unicité sur la création/modif d'animation : les animations doivent avoir des libellés différents

--- a/views/addAnimation.ejs
+++ b/views/addAnimation.ejs
@@ -43,6 +43,10 @@
       </div>
 
     	<button type="submit" class="btn btn-primary">Ajouter</button>
+      <div ng-show="error" class="alert alert-danger">
+       <strong>ERREUR</strong> - {{error}}
+      </div>
+
   	</form>
 
   </form>
