--- a/views/editAnimation.ejs
+++ b/views/editAnimation.ejs
@@ -48,6 +48,10 @@
         <strong>{{success}}</strong> - L'animation {{animation.libelle}} a bien été modifiée.
       </div>
 
+      <div ng-show="error" class="alert alert-danger">
+        <strong>ERREUR</strong> - {{error}}
+      </div>
+
   	</form>
 
   </form>
